--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p ${PORT:-5001}",
+    "dev": "next dev -p ${PORT:-5001}",
+    "dev:turbopack": "next dev --turbopack -p ${PORT:-5001}",
     "build": "next build",
-    "start": "next start -p ${PORT:-5000}",
+    "start": "next start -p ${PORT:-5001}",
     "lint": "next lint",
     "export": "next export",
     "setup-env": "node setup-env.js",
