Enhance admin UI with password change functionality, unified actions dialog for cards, and improved wallet management. Update ecosystem configuration for single-page serving and adjust package scripts accordingly. Refactor user and game pages for better data handling and UI consistency.

--- a/admin-ui/package.json
+++ b/admin-ui/package.json
@@ -16,7 +16,7 @@
     "pm2:monit": "pm2 monit",
     "pm2:reload": "pm2 reload admin-dashboard",
     "start": "npm run build && pm2 start ecosystem.config.cjs",
-    "serve": "npx serve dist -p 3000"
+    "serve": "npx serve dist -p 3000 --single"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
